@@ -87,11 +87,15 @@ The jobs are running on the host.
 .PP
 \fBSLOTS\fR
 .IP
-The number of used slots and the maximum number of slots this project/user/host/queue can start.
+The number of used slots and the maximum number of slots this project/user/host/queue can use.
+.PP
+\fBSLOTS_PER_PROCESSOR\fR
+.IP
+The maximum number of slots per processor this project/user/host/queue can use.
 .PP
 \fBJOBS\fR
 .IP
-The number of started jobs and the maximum number of jobs this project/user/host/queue can start.
+The number of started jobs and the maximum number of jobs this project/user/host/queue can use.
 .PP
 .SH EXAMPLE
 .PP
